# ese_5190_lab2b

./: CMakeLists.txt  README.md  audio.c
01_registers/: CMakeLists.txt  readme.md  register_button.c
01_registers/ws2812/: ws2812_parallel.c
02_repl/: example_auto_set_url.cmake  lab2b_register.c  readme.md
03_sequencer/: CMakeLists.txt  readme.md  sequencer.c  test.c
03_sequencer/pySerial/: main.py
03_sequencer/ws2812/: ws2812.c
04_slow_motion/: pico_sdk_import.cmake  readme.md  sequencer_slow.c
04_slow_motion/pySerial/: test.txt
04_slow_motion/ws2812/: CMakeLists.txt  ws2812.h
05_i2c_traffic/: README.md
06_pioscope/: CMakeLists.txt  logic_analyzer copy.c  logic_analyzer.c  readme.md
07_pio_sequencer/: CMakeLists.txt  pio_sequencer.c  readme.md  sequencer.pio
08_apds_procotol/: APDS9960.c  CMakeLists.txt  main.c  pio_i2c.c  pio_i2c.h  readme.md
09_lab_on_a_chip/: APDS9960.h  CMakeLists.txt  i2c.pio  main.c  readme.md  ws2812.c  ws2812.h  ws2812.pio
10_proposal/: audio.c  test.c
10_protoboard/: music.h  readme.md
