cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(test_project)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})
pico_sdk_init()
include(example_auto_set_url.cmake)
add_executable(register_button register_button.c ws2812/ws2812.c)
include_directories(ws2812)
pico_enable_stdio_usb(register_button 1)
pico_enable_stdio_uart(register_button 1)
pico_add_extra_outputs(register_button)
target_link_libraries(register_button pico_stdlib hardware_pio)
add_subdirectory(ws2812)