cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(sequencer_project)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})
pico_sdk_init()
include(example_auto_set_url.cmake)
add_executable(sequencer sequencer.c ws2812/ws2812.c)
include_directories(ws2812)
pico_enable_stdio_usb(sequencer 1)
pico_enable_stdio_uart(sequencer 1)
pico_add_extra_outputs(sequencer)
target_link_libraries(sequencer pico_stdlib hardware_pio)
add_subdirectory(ws2812)