cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(logic_analyser)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})
pico_sdk_init()
include(example_auto_set_url.cmake)
add_executable(logic_analyser logic_analyzer.c )
# include_directories(ws2812)
pico_enable_stdio_usb(logic_analyser 1)
pico_enable_stdio_uart(logic_analyser 1)
pico_add_extra_outputs(logic_analyser)
target_link_libraries(logic_analyser pico_stdlib hardware_pio hardware_dma hardware_pwm)