cmake_minimum_required(VERSION 3.13)
include(pico_sdk_import.cmake)
project(pio_sequencer)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(PICO_EXAMPLES_PATH ${PROJECT_SOURCE_DIR})
pico_sdk_init()
include(example_auto_set_url.cmake)
add_executable(pio_sequencer pio_sequencer.c )
# include_directories(ws2812)
pico_generate_pio_header(pio_sequencer ${CMAKE_CURRENT_LIST_DIR}/sequencer.pio OUTPUT_DIR ${CMAKE_CURRENT_LIST_DIR}/generated)
pico_enable_stdio_usb(pio_sequencer 1)
pico_enable_stdio_uart(pio_sequencer 1)
pico_add_extra_outputs(pio_sequencer)
target_link_libraries(pio_sequencer pico_stdlib hardware_pio hardware_dma hardware_pwm)